--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <label for="loginPassword">Password</label>
                     <input type="password" id="loginPassword" name="password" placeholder="Enter your password" required>
                 </div>
+                <a href="../pages/forgot_password.php" style="color: #10b859; font-weight: 600; text-decoration: none; text-align: right;">Forgot Password</a>
                 <button type="submit" class="cta-button">Login</button>
                 <div class="switch-link">
                     Don't have an account? <a id="switchToSignup">Sign Up</a>
