Added additional meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code With Mukhiteee | Web Development</title>
+    <title>Web Development For Beginners | Code With Mukhiteee</title>
     <link rel="stylesheet" href="styles/main.css">
+<meta name="description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community. Platform launching soon!">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Web Development for Beginners">
+<meta name="twitter:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community. Platform launching soon!">
+<meta name="twitter:image" content="https://yourdomain.com/banner.png">
+
+<meta property="og:title" content="Web Development for Beginners">
+<meta property="og:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community. Platform launching soon!">
+<meta property="og:image" content="https://yourdomain.com/banner.png">
+<meta property="og:url" content="https://yourdomain.com/">
+<meta property="og:type" content="website">
 </head>
 <body>
         <div class="logo">Code <span>With</span> Mukhiteee</div>
