--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development For Beginners | Code With Mukhiteee</title>
     <link rel="stylesheet" href="styles/main.css">
-<meta name="description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community. Platform launching soon!">
+    <link rel="icon" href="" type="image/png">
+    <link rel="apple-touch-icon" href="y">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#10b859">
+<meta name="description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community.">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Web Development for Beginners">
-<meta name="twitter:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community. Platform launching soon!">
+<meta name="twitter:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community.">
 <meta name="twitter:image" content="https://yourdomain.com/banner.png">
 
 <meta property="og:title" content="Web Development for Beginners">
-<meta property="og:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community. Platform launching soon!">
+<meta property="og:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community.">
 <meta property="og:image" content="https://yourdomain.com/banner.png">
 <meta property="og:url" content="https://yourdomain.com/">
 <meta property="og:type" content="website">
@@ -57,6 +61,10 @@
                 <div class="form-group">
                     <label for="signupPassword">Password</label>
                     <input type="password" name="password" id="signupPassword" placeholder="Create a strong password" required>
+                </div>
+                <div class="form-group">
+                    <label for="signupConfirm">Confirm Password</label>
+                    <input type="password" name="confirmpassword" id="signupConfirm" placeholder="Repeat Password" required>
                 </div>
                 <button type="submit" class="cta-button">Sign Up</button>
                 <div class="switch-link">
