--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Development For Beginners | Code With Mukhiteee</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" href="" type="image/png">
-    <link rel="apple-touch-icon" href="y">
+    <link rel="icon" href="assets/images/icon.png" type="image/png">
+    <link rel="apple-touch-icon" href="assets/images/icon.png">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#10b859">
 <meta name="description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community.">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Web Development for Beginners">
 <meta name="twitter:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community.">
-<meta name="twitter:image" content="https://yourdomain.com/banner.png">
+<meta name="twitter:image" content="https://webdev.wasmer.app/assets/images/banner.png">
 
 <meta property="og:title" content="Web Development for Beginners">
 <meta property="og:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community.">
-<meta property="og:image" content="https://yourdomain.com/banner.png">
-<meta property="og:url" content="https://yourdomain.com/">
+<meta property="og:image" content="https://webdev.wasmer.app/assets/images/banner.png">
+<meta property="og:url" content="https://webdev.wasmer.app">
 <meta property="og:type" content="website">
 </head>
 <body>
@@ -42,7 +42,7 @@
                     <label for="loginPassword">Password</label>
                     <input type="password" id="loginPassword" name="password" placeholder="Enter your password" required>
                 </div>
-                <a href="../pages/forgot_password.php" style="color: #10b859; font-weight: 600; text-decoration: none; text-align: right;">Forgot Password</a>
+                <a href="pages/forgot_password.php" style="color: #10b859; font-weight: 600; text-decoration: none; text-align: right;">Forgot Password</a>
                 <button type="submit" class="cta-button">Login</button>
                 <div class="switch-link">
                     Don't have an account? <a id="switchToSignup">Sign Up</a>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="form-group">
                     <label for="signupConfirm">Confirm Password</label>
-                    <input type="password" name="confirmpassword" id="signupConfirm" placeholder="Repeat Password" required>
+                    <input type="password" name="confirm" id="signupConfirm" placeholder="Repeat Password" required>
                 </div>
                 <button type="submit" class="cta-button">Sign Up</button>
                 <div class="switch-link">
@@ -73,6 +73,11 @@
             </form>
         </div>
     </div>
+    
+    <!-- Floating WhatsApp Button -->
+    <a class="float-contact" href="https://wa.me/2349025948400" target="_blank" title="Contact">
+      <i class="fab fa-whatsapp"></i> Contact
+    </a>
     <script src="scripts/main.js"></script>
 </body>
 </html>
