Changed index.html banner from URL to Path

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Web Development for Beginners">
 <meta name="twitter:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community.">
-<meta name="twitter:image" content="https://webdev.wasmer.app/assets/images/banner.jpg">
+<meta name="twitter:image" content="assets/images/banner.jpg">
 
 <meta property="og:title" content="Web Development for Beginners">
 <meta property="og:description" content="Learn web development from scratch. Join our beginner-friendly course, get hands-on tutorials, and connect with a vibrant learning community.">
-<meta property="og:image" content="https://webdev.wasmer.app/assets/images/banner.jpg">
+<meta property="og:image" content="assets/images/banner.jpg">
 <meta property="og:url" content="https://webdev.wasmer.app">
 <meta property="og:type" content="website">
 </head>
